--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
@@ -20,7 +21,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.3.0",
-    "terser": "^5.44.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "terser": "^5.24.0"
   }
 }
