--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
@@ -20,8 +18,6 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "gh-pages": "^6.3.0",
-    "vite": "^5.0.8",
-    "terser": "^5.24.0"
+    "vite": "^5.0.8"
   }
 }
