--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:analyze": "vite build --mode analyze",
+    "preview": "vite preview",
+    "analyze": "npm run build:analyze && open dist/bundle-analysis.html"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
@@ -18,6 +20,8 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "rollup-plugin-visualizer": "^6.0.3",
+    "vite": "^5.0.8",
+    "vite-bundle-analyzer": "^1.2.3"
   }
 }
