--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:analyze": "vite build --mode analyze",
     "preview": "vite preview",
-    "analyze": "npm run build:analyze && open dist/bundle-analysis.html"
+    "analyze": "npm run build:analyze && open dist/bundle-analysis.html",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:preview": "npm run build && firebase hosting:channel:deploy preview"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
