fix: CORS hatası düzeltildi - Google Fonts local font'a çevrildi
- 🔧 Google Fonts import'u kaldırıldı
- 📁 Press Start 2P font'u local olarak eklendi
- 🌐 Firebase hosting'de font CORS header'ları eklendi
- ⚡ Font loading performansı iyileştirildi
- 🛡️ CORS policy hatası çözüldü

--- a/firebase.json
+++ b/firebase.json
@@ -33,6 +33,19 @@
             "value": "image/svg+xml"
           }
         ]
+      },
+      {
+        "source": "**/*.woff2",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "font/woff2"
+          },
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
       }
     ],
     "rewrites": [
