--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "poop-count-pwa",
+  "name": "poop-hero-pwa",
   "version": "1.0.0",
-  "description": "Sevgililer için eğlenceli tuvalet takip uygulaması",
+  "description": "Sevgililer için eğlenceli tuvalet takip uygulaması - Poop Hero",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "rollup-plugin-visualizer": "^6.0.3",
-    "vite": "^5.0.8",
+    "vite": "^7.1.6",
     "vite-bundle-analyzer": "^1.2.3"
   }
 }
